--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div class="container01-01">
         <div class="item item01 ">
-          <a href="../top-page /09_okumiji/omikuji.html" title="今日の運勢を占うゲームです。"><img src="img/sakura.jpg"
+          <a href="09_okumiji/omikuji.html" title="今日の運勢を占うゲームです。"><img src="img/sakura.jpg"
               alt="おみくじ１"><br>おみくじ１</a>
         </div>
         <div class="item item01">
@@ -104,5 +104,6 @@
   <script src="js/index.js"> </script>
 
 </body>
+
 
 </html>
