--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
               alt="おみくじ１"><br>おみくじ１</a>
         </div>
         <div class="item item01">
-          <a href="../top-page /10a_omikuji/omikuji.html" title="音付きです。"><img src="img/omikuji2.png" alt="おみくじ２"
+          <a href="10a_omikuji/omikuji.html" title="音付きです。"><img src="img/omikuji2.png" alt="おみくじ２"
               class="img_omikuji2"><br>おみくじ２</a>
         </div>
         <div class="item item01">
-          <a href="../top-page /10c_omikuji/omikuji.html" title="テキストも画像です。"><img src="img/omikuji3.png"
+          <a href="10c_omikuji/omikuji.html" title="テキストも画像です。"><img src="img/omikuji3.png"
               alt="おみくじ３"><br>おみくじ３</a>
         </div>
         <div class="item item01">
-          <a href="../top-page 01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png"
+          <a href="01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png"
               alt="鬼滅の刃おみくじ"><br>鬼滅の刃<br>おみくじ</a>
         </div>
       </div>
 
       <div class="container01-02">
         <div class="item item01">
-          <a href="../top-page /02_calculator/calculator.html" title="かんたんな計算機です。"><img src="img/calc1.jpg"
+          <a href="02_calculator/calculator.html" title="かんたんな計算機です。"><img src="img/calc1.jpg"
               alt="計算機１"><br>計算機１</a>
         </div>
         <div class="item item01">
-          <a href="../top-page /04-calcuator/calculator.html" title="=全部ボタンの計算機です。"><img src="img/calc3.jpg"
+          <a href="04-calcuator/calculator.html" title="=全部ボタンの計算機です。"><img src="img/calc3.jpg"
               alt="計算機３"><br>計算機2</a>
         </div>
 
@@ -107,3 +107,4 @@
 
 
 </html>
+
