--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               alt="おみくじ３"><br>おみくじ３</a>
         </div>
         <div class="item item01">
-          <a href="01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png"
+          <a href="top-page 01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png"
               alt="鬼滅の刃おみくじ"><br>鬼滅の刃<br>おみくじ</a>
         </div>
       </div>
@@ -107,4 +107,5 @@
 
 
 </html>
+
 
