--- a/98_Time guessing quiz/timeguess.html
+++ b/98_Time guessing quiz/timeguess.html
@@ -43,6 +43,7 @@
     <footer>
       <p>Copyright 2025 s247049　NGUYEN TUYET HONG</p>
     </footer>
-    <script src="timeguess.js"></script>
+    <script src="js/timeguess.js"></script>
   </body>
+
 </html>
