--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="item item01">
-          <a href="98_Time guessing quiz/timeguess.html" title="=時間当てクイズです"><img src="img/clock1.png"
+          <a href="98_03Time guessing quiz/timeguess.html" title="=時間当てクイズです"><img src="img/clock1.png"
               alt="クイズ">時間当て<br>クイズ</a>
         </div>
       </div>
@@ -107,6 +107,7 @@
 
 
 </html>
+
 
 
 
