--- a/index.html
+++ b/index.html
@@ -24,35 +24,35 @@
 
       <div class="container01-01">
         <div class="item item01 ">
-          <a href="09_okumiji/omikuji.html" title="今日の運勢を占うゲームです。"><img src="img/sakura.jpg"
+          <a href="../top-page /09_okumiji/omikuji.html" title="今日の運勢を占うゲームです。"><img src="img/sakura.jpg"
               alt="おみくじ１"><br>おみくじ１</a>
         </div>
         <div class="item item01">
-          <a href="10a_omikuji/omikuji.html" title="音付きです。"><img src="img/omikuji2.png" alt="おみくじ２"
+          <a href="../top-page /10a_omikuji/omikuji.html" title="音付きです。"><img src="img/omikuji2.png" alt="おみくじ２"
               class="img_omikuji2"><br>おみくじ２</a>
         </div>
         <div class="item item01">
-          <a href="10c_omikuji/omikuji.html" title="テキストも画像です。"><img src="img/omikuji3.png"
+          <a href="../top-page /10c_omikuji/omikuji.html" title="テキストも画像です。"><img src="img/omikuji3.png"
               alt="おみくじ３"><br>おみくじ３</a>
         </div>
         <div class="item item01">
-          <a href="01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png"
+          <a href="../top-page /01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png"
               alt="鬼滅の刃おみくじ"><br>鬼滅の刃<br>おみくじ</a>
         </div>
       </div>
 
       <div class="container01-02">
         <div class="item item01">
-          <a href="02_calculator/calculator.html" title="かんたんな計算機です。"><img src="img/calc1.jpg"
+          <a href="../top-page /02_calculator/calculator.html" title="かんたんな計算機です。"><img src="img/calc1.jpg"
               alt="計算機１"><br>計算機１</a>
         </div>
         <div class="item item01">
-          <a href="04-calcuator/calculator.html" title="=全部ボタンの計算機です。"><img src="img/calc3.jpg"
+          <a href="../top-page /04-calcuator/calculator.html" title="=全部ボタンの計算機です。"><img src="img/calc3.jpg"
               alt="計算機３"><br>計算機2</a>
         </div>
 
         <div class="item item01">
-          <a href="98_03Time guessing quiz/timeguess.html" title="=時間当てクイズです"><img src="img/clock1.png"
+          <a href="../top-page /98_03Time guessing quiz/timeguess.html" title="=時間当てクイズです"><img src="img/clock1.png"
               alt="クイズ">時間当て<br>クイズ</a>
         </div>
       </div>
@@ -63,15 +63,15 @@
         </div>
 
         <div class="item item01">
-          <a href="04_memo_app_v1/memo.html" title="メモアプリv1です。"><img src="img/memo1.png" alt="memo v1"><br>memo v1</a>
+          <a href="./04_memo/memo.html" title="メモアプリv1です。"><img src="img/memo1.png" alt="memo v1"><br>memo v1</a>
         </div>
 
         <div class="item item01">
-          <a href="04_memo_app_v2/memo.html" title="メモアプリv2です。"><img src="img/memo2.png" alt="memo v2"><br>memo v2</a>
+          <a href="./04_03_meno/memo.html" title="メモアプリv2です。"><img src="img/memo2.png" alt="memo v2"><br>memo v2</a>
         </div>
 
         <div class="item item01">
-          <a href="04_memo_app_v3/memo.html" title="メモアプリv3です。"><img src="img/memo3.png" alt="memo v3"><br>memo v3</a>
+          <a href="./04_04_meno/memo.html" title="メモアプリv3です。"><img src="img/memo3.png" alt="memo v3"><br>memo v3</a>
         </div>
       </div>
 
@@ -105,11 +105,4 @@
 
 </body>
 
-
 </html>
-
-
-
-
-
-
