--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
         </div>
 
         <div class="item item01">
-          <a href="./04_memo/memo.html" title="メモアプリv1です。"><img src="img/memo1.png" alt="memo v1"><br>memo v1</a>
+          <a href="04_memo/memo.html" title="メモアプリv1です。"><img src="img/memo1.png" alt="memo v1"><br>memo v1</a>
         </div>
 
         <div class="item item01">
-          <a href="./04_03_meno/memo.html" title="メモアプリv2です。"><img src="img/memo2.png" alt="memo v2"><br>memo v2</a>
+          <a href="04_03_meno/memo.html" title="メモアプリv2です。"><img src="img/memo2.png" alt="memo v2"><br>memo v2</a>
         </div>
 
         <div class="item item01">
-          <a href="./04_04_meno/memo.html" title="メモアプリv3です。"><img src="img/memo3.png" alt="memo v3"><br>memo v3</a>
+          <a href="04_04_meno/memo.html" title="メモアプリv3です。"><img src="img/memo3.png" alt="memo v3"><br>memo v3</a>
         </div>
       </div>
 
@@ -104,5 +104,6 @@
   <script src="js/index.js"> </script>
 
 </body>
+
 
 </html>
