--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
 
       <div class="container01-01">
         <div class="item item01 ">
-          <a href="../top-page /09_okumiji/omikuji.html" title="今日の運勢を占うゲームです。"><img src="img/sakura.jpg"
+          <a href="./09_okumiji/omikuji.html" title="今日の運勢を占うゲームです。"><img src="img/sakura.jpg"
               alt="おみくじ１"><br>おみくじ１</a>
         </div>
         <div class="item item01">
-          <a href="../top-page /10a_omikuji/omikuji.html" title="音付きです。"><img src="img/omikuji2.png" alt="おみくじ２"
+          <a href="./10a_omikuji/omikuji.html" title="音付きです。"><img src="img/omikuji2.png" alt="おみくじ２"
               class="img_omikuji2"><br>おみくじ２</a>
         </div>
         <div class="item item01">
-          <a href="../top-page /10c_omikuji/omikuji.html" title="テキストも画像です。"><img src="img/omikuji3.png"
+          <a href="./10c_omikuji/omikuji.html" title="テキストも画像です。"><img src="img/omikuji3.png"
               alt="おみくじ３"><br>おみくじ３</a>
         </div>
         <div class="item item01">
-          <a href="../top-page /01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png"
+          <a href="./01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png"
               alt="鬼滅の刃おみくじ"><br>鬼滅の刃<br>おみくじ</a>
         </div>
       </div>
 
       <div class="container01-02">
         <div class="item item01">
-          <a href="../top-page /02_calculator/calculator.html" title="かんたんな計算機です。"><img src="img/calc1.jpg"
+          <a href="./02_calculator/calculator.html" title="かんたんな計算機です。"><img src="img/calc1.jpg"
               alt="計算機１"><br>計算機１</a>
         </div>
         <div class="item item01">
@@ -107,3 +107,4 @@
 
 
 </html>
+
