--- a/index.html
+++ b/index.html
@@ -47,31 +47,31 @@
               alt="計算機１"><br>計算機１</a>
         </div>
         <div class="item item01">
-          <a href="../top-page /04-calcuator/calculator.html" title="=全部ボタンの計算機です。"><img src="img/calc3.jpg"
+          <a href="./04-calcuator/calculator.html" title="=全部ボタンの計算機です。"><img src="img/calc3.jpg"
               alt="計算機３"><br>計算機2</a>
         </div>
 
         <div class="item item01">
-          <a href="../top-page /98_03Time guessing quiz/timeguess.html" title="=時間当てクイズです"><img src="img/clock1.png"
+          <a href="./98_03Time guessing quiz/timeguess.html" title="=時間当てクイズです"><img src="img/clock1.png"
               alt="クイズ">時間当て<br>クイズ</a>
         </div>
       </div>
 
       <div class="container01-03">
         <div class="item item01">
-          <a href="04_memo/memo.html" title="メモアプリです。"><img src="img/memo.png" alt="memo"><br>memo</a>
+          <a href="./04memo/memo.html" title="メモアプリです。"><img src="img/memo.png" alt="memo"><br>memo</a>
         </div>
 
         <div class="item item01">
-          <a href="04_memo/memo.html" title="メモアプリv1です。"><img src="img/memo1.png" alt="memo v1"><br>memo v1</a>
+          <a href="./04_04_memo/memo.html" title="メモアプリv1です。"><img src="img/memo1.png" alt="memo v1"><br>memo v1</a>
         </div>
 
         <div class="item item01">
-          <a href="04_03_meno/memo.html" title="メモアプリv2です。"><img src="img/memo2.png" alt="memo v2"><br>memo v2</a>
+          <a href="04_05_meno/memo.html" title="メモアプリv2です。"><img src="img/memo2.png" alt="memo v2"><br>memo v2</a>
         </div>
 
         <div class="item item01">
-          <a href="04_04_meno/memo.html" title="メモアプリv3です。"><img src="img/memo3.png" alt="memo v3"><br>memo v3</a>
+          <a href="04_06_meno/memo.html" title="メモアプリv3です。"><img src="img/memo3.png" alt="memo v3"><br>memo v3</a>
         </div>
       </div>
 
@@ -107,4 +107,5 @@
 
 
 </html>
+
 
