--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div class="container01-03">
         <div class="item item01">
-          <a href="./04memo/memo.html" title="メモアプリです。"><img src="img/memo.png" alt="memo"><br>memo</a>
+          <a href="./04_memo/memo.html" title="メモアプリです。"><img src="img/memo.png" alt="memo"><br>memo</a>
         </div>
 
         <div class="item item01">
@@ -67,11 +67,11 @@
         </div>
 
         <div class="item item01">
-          <a href="04_05_meno/memo.html" title="メモアプリv2です。"><img src="img/memo2.png" alt="memo v2"><br>memo v2</a>
+          <a href="./04_05_meno/memo.html" title="メモアプリv2です。"><img src="img/memo2.png" alt="memo v2"><br>memo v2</a>
         </div>
 
         <div class="item item01">
-          <a href="04_06_meno/memo.html" title="メモアプリv3です。"><img src="img/memo3.png" alt="memo v3"><br>memo v3</a>
+          <a href="./04_6 meno/memo.html" title="メモアプリv3です。"><img src="img/memo3.png" alt="memo v3"><br>memo v3</a>
         </div>
       </div>
 
@@ -107,5 +107,6 @@
 
 
 </html>
+
 
 
