--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="item item01">
-          <a href="./04_04_memo/memo.html" title="メモアプリv1です。"><img src="img/memo1.png" alt="memo v1"><br>memo v1</a>
+          <a href="./04_04_meno/memo.html" title="メモアプリv1です。"><img src="img/memo1.png" alt="memo v1"><br>memo v1</a>
         </div>
 
         <div class="item item01">
@@ -107,6 +107,7 @@
 
 
 </html>
+
 
 
 
